front end adjustments

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,6 +1,8 @@
 <div ng-include="'components/main/header.html'"></div>
 
 <div class="container">
+  <div class="page-header"><h1>Main Page</h1></div>
+
   <div class="row">
     <div class="col-lg-12">
       <br>
