--- a/client/app/users/users.html
+++ b/client/app/users/users.html
@@ -1,3 +1,14 @@
-<div class="col-md-12">
-This is the users view.
+<div ng-include="'components/main/header.html'"></div>
+
+<div class="container" ng-show="userName">
+  <div class="page-header"><h1>{{ userName }}'s Board</h1></div>
+  <div class="row">
+    <div class="col-lg-12">
+    </div>
+  </div>
 </div>
+<div class="container" ng-show="!userName">
+  <div><h3>Something went wrong, try again.</h3></div>
+</div>
+
+<div ng-include="'components/main/footer.html'"></div>
