--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/myBoard/myBoard.css">
+      <link rel="stylesheet" href="app/users/users.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
@@ -71,6 +72,8 @@
           <script src="app/main/main.js"></script>
           <script src="app/myBoard/myBoard.controller.js"></script>
           <script src="app/myBoard/myBoard.js"></script>
+          <script src="app/users/users.controller.js"></script>
+          <script src="app/users/users.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <!-- endinjector -->
