--- a/client/index.html
+++ b/client/index.html
@@ -69,6 +69,9 @@
         <!-- Include Masonry -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.js"></script>
         
+        <!-- http://stackoverflow.com/questions/21862757/bower-or-grunt-keeps-removing-jquery-from-index-html -->
+        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+
         <!-- build:js({.tmp,client}) app/app.js -->
         
         <script src="app/app.js"></script>
