update my board page - implemented like dislike of pins, delete pin; started implementation of recent polls  route

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/myBoard/myBoard.css">
+      <link rel="stylesheet" href="app/recentPins/recentPins.css">
       <link rel="stylesheet" href="app/users/users.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
@@ -80,6 +81,8 @@
           <script src="app/main/main.js"></script>
           <script src="app/myBoard/myBoard.controller.js"></script>
           <script src="app/myBoard/myBoard.js"></script>
+          <script src="app/recentPins/recentPins.controller.js"></script>
+          <script src="app/recentPins/recentPins.js"></script>
           <script src="app/users/users.controller.js"></script>
           <script src="app/users/users.js"></script>
           <script src="components/modal/modal.service.js"></script>
