--- a/client/app/myBoard/myBoard.html
+++ b/client/app/myBoard/myBoard.html
@@ -11,14 +11,16 @@
 	  	  		<!-- Add a new pin -->
 	  	  		<div id="pin-add" class="alert alert-danger">
 		  	  		<button id="pin-add-button" ng-click="toggleModal()" class="btn btn-primary">Add A Pin</button>
-		  	  		<p class="text-danger"><br>{{ pinAddMessage }}</p>
+		  	  		<p class="text-danger"><br>{{ pinMessage }}</p>
 		  	  	</div>
 		  	  	<!-- User pin list -->
 		  	  	<div ng-repeat="pin in pinList" >
 					<div class="pin alert alert-success">{{ pin.title }}
 						<img id="pin-image" height="100px" weight="180px" src="{{ pin.source }}" alt="Image Preview" />
 						<!-- Likes counter -->
-						<div id="like-box"><a ng-click="likePin(pin._id)"><i class="fa fa-heart fa-2x"></i><span class="likes-counter"></a>{{ pin.likes }}</span><a ng-click="deletePin(pin._id)"<i class="fa fa-trash fa-2x"></i></a></div>
+						<!-- If user does not yet like pin, show red like heart  -->
+						<!-- If user already likes pin, show black dislike heart  -->
+						<div id="like-box"><a ng-show="pin.userLikes.indexOf(userId) == -1" ng-click="likePin(pin._id)"><i class="like fa fa-heart fa-2x"></i><span class="likes-counter"></a><a ng-show="pin.userLikes.indexOf(userId) != -1" ng-click="dislikePin(pin._id)"><i class="dislike fa fa-heart fa-2x"></i><span class="likes-counter"></a>{{ pin.userLikes.length }}</span><a ng-click="deletePin(pin._id)"<i class="fa fa-trash fa-2x"></i></a></div>
 					</div>
 				</div>
 			</div>
