--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -5,9 +5,29 @@
 
   <div class="row">
     <div class="col-lg-12">
-      <br>
-      <!-- If user is logged in, display user's name -->
-      <div ng-show="userId">User ID: {{ userId }}</div>
+      <!-- If user is not logged in, prompt user to sign up or login -->
+      <div ng-show="!userId"><h2>Login or sign up.</h2><br></div>
+
+    <!-- Recent Pin List  -->
+      <h2>Recent pins</h2>
+	  <div class="row">
+	      	<div class="col-lg-12">
+		  	  	<div id="pin-list" class="js-masonry" class="pin alert alert-success">
+			  	  	<!-- User pin list -->
+			  	  	<div ng-repeat="pin in pinList" >
+						<div class="pin alert alert-info">{{ pin.title }}
+							<img id="pin-image" height="100px" weight="180px" src="{{ pin.source }}" alt="Image Preview" />
+							<!-- Likes counter box for logged in user -->
+							<!-- If user does not yet like pin, show red like heart  -->
+							<!-- If user already likes pin, show black dislike heart  -->
+							<div ng-show="userId" id="like-box"><a ng-show="pin.userLikes.indexOf(userId) == -1" ng-click="likePin(pin._id)"><i class="like fa fa-heart fa-2x"></i><span class="likes-counter"></a><a ng-show="pin.userLikes.indexOf(userId) != -1" ng-click="dislikePin(pin._id)"><i class="dislike fa fa-heart fa-2x"></i><span class="likes-counter"></a>{{ pin.userLikes.length }}</span><br>By: <a ng-show="pin.userId == userId" href="/myBoard"><span id="username">you</span></a><a ng-show="pin.userId != userId" href="/users/{{pin.userId}}"><span id="username">{{ pin.userName }}</span></a></div>
+							<!-- Likes counter box for not logged in user -->
+							<div ng-show="!userId" id="like-box"><i class="like fa fa-heart fa-2x"></i><span class="likes-counter">{{ pin.userLikes.length }}</span><br>By: <a href="/users/{{pin.userId}}">{{ pin.userName }}</a></div>
+						</div>
+					</div>
+				</div>
+			</div>
+	  </div>
     </div>
   </div>
 </div>
