--- a/client/app/myBoard/myBoard.html
+++ b/client/app/myBoard/myBoard.html
@@ -15,7 +15,7 @@
 		  	  	</div>
 		  	  	<!-- User pin list -->
 		  	  	<div ng-repeat="pin in pinList" >
-					<div class="pin alert alert-success">{{ pin.title }}
+					<div class="pin alert alert-info">{{ pin.title }}
 						<img id="pin-image" height="100px" weight="180px" src="{{ pin.source }}" alt="Image Preview" />
 						<!-- Likes counter -->
 						<!-- If user does not yet like pin, show red like heart  -->
