--- a/client/app/recentPins/recentPins.html
+++ b/client/app/recentPins/recentPins.html
@@ -5,23 +5,24 @@
   <div class="row">
     <div class="page-header"><h1>Recent Pins</h1></div>
 
-  <div class="row">
-      	<div class="col-lg-12">
-	  	  	<div id="pin-list" class="js-masonry" class="pin alert alert-success">
-		  	  	<!-- User pin list -->
-		  	  	<div ng-repeat="pin in pinList" >
-					<div class="pin alert alert-success">{{ pin.title }}
-						<img id="pin-image" height="100px" weight="180px" src="{{ pin.source }}" alt="Image Preview" />
-						<!-- Likes counter box for logged in user -->
-						<!-- If user does not yet like pin, show red like heart  -->
-						<!-- If user already likes pin, show black dislike heart  -->
-						<div ng-show="userId" id="like-box"><a ng-show="pin.userLikes.indexOf(userId) == -1" ng-click="likePin(pin._id)"><i class="like fa fa-heart fa-2x"></i><span class="likes-counter"></a><a ng-show="pin.userLikes.indexOf(userId) != -1" ng-click="dislikePin(pin._id)"><i class="dislike fa fa-heart fa-2x"></i><span class="likes-counter"></a>{{ pin.userLikes.length }}</span><br>By: <a href="/users/{{pin.userId}}"><span id="username" ng-show="pin.userId == userId">you</span><span id="username" ng-show="pin.userId != userId">{{ pin.userName }}</span></a></div>
-						<!-- Likes counter box for not logged in user -->
-						<div ng-show="!userId" id="like-box"><i class="like fa fa-heart fa-2x"></i><span class="likes-counter">{{ pin.userLikes.length }}</span><br>By: <a href="/users/{{pin.userId}}">{{ pin.userName }}</a></div>
+    <!-- Pin List  -->
+	  <div class="row">
+	      	<div class="col-lg-12">
+		  	  	<div id="pin-list" class="js-masonry" class="pin alert alert-success">
+			  	  	<!-- User pin list -->
+			  	  	<div ng-repeat="pin in pinList" >
+						<div class="pin alert alert-info">{{ pin.title }}
+							<img id="pin-image" height="100px" weight="180px" src="{{ pin.source }}" alt="Image Preview" />
+							<!-- Likes counter box for logged in user -->
+							<!-- If user does not yet like pin, show red like heart  -->
+							<!-- If user already likes pin, show black dislike heart  -->
+							<div ng-show="userId" id="like-box"><a ng-show="pin.userLikes.indexOf(userId) == -1" ng-click="likePin(pin._id)"><i class="like fa fa-heart fa-2x"></i><span class="likes-counter"></a><a ng-show="pin.userLikes.indexOf(userId) != -1" ng-click="dislikePin(pin._id)"><i class="dislike fa fa-heart fa-2x"></i><span class="likes-counter"></a>{{ pin.userLikes.length }}</span><br>By: <a ng-show="pin.userId == userId" href="/myBoard"><span id="username">you</span></a><a ng-show="pin.userId != userId" href="/users/{{pin.userId}}"><span id="username">{{ pin.userName }}</span></a></div>
+							<!-- Likes counter box for not logged in user -->
+							<div ng-show="!userId" id="like-box"><i class="like fa fa-heart fa-2x"></i><span class="likes-counter">{{ pin.userLikes.length }}</span><br>By: <a href="/users/{{pin.userId}}">{{ pin.userName }}</a></div>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-  </div>
+	  </div>
 
 <div ng-include="'components/main/footer.html'"></div>
