--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -11,22 +11,22 @@
     <!-- Recent Pin List  -->
       <h2>Recent pins</h2>
 	  <div class="row">
-	      	<div class="col-lg-12">
-		  	  	<div id="pin-list" class="js-masonry" class="pin alert alert-success">
-			  	  	<!-- User pin list -->
-			  	  	<div ng-repeat="pin in pinList" >
-						<div class="pin alert alert-info">{{ pin.title }}
-							<img id="pin-image" height="100px" weight="180px" src="{{ pin.source }}" alt="Image Preview" />
-							<!-- Likes counter box for logged in user -->
-							<!-- If user does not yet like pin, show red like heart  -->
-							<!-- If user already likes pin, show black dislike heart  -->
-							<div ng-show="userId" id="like-box"><a ng-show="pin.userLikes.indexOf(userId) == -1" ng-click="likePin(pin._id)"><i class="like fa fa-heart fa-2x"></i><span class="likes-counter"></a><a ng-show="pin.userLikes.indexOf(userId) != -1" ng-click="dislikePin(pin._id)"><i class="dislike fa fa-heart fa-2x"></i><span class="likes-counter"></a>{{ pin.userLikes.length }}</span><br>By: <a ng-show="pin.userId == userId" href="/myBoard"><span id="username">you</span></a><a ng-show="pin.userId != userId" href="/users/{{pin.userId}}"><span id="username">{{ pin.userName }}</span></a></div>
-							<!-- Likes counter box for not logged in user -->
-							<div ng-show="!userId" id="like-box"><i class="like fa fa-heart fa-2x"></i><span class="likes-counter">{{ pin.userLikes.length }}</span><br>By: <a href="/users/{{pin.userId}}">{{ pin.userName }}</a></div>
-						</div>
+      	<div class="col-lg-12">
+	  	  	<div id="pin-list" class="js-masonry" class="pin alert alert-success">
+		  	  	<!-- User pin list -->
+		  	  	<div ng-repeat="pin in pinList | orderBy: '-created'" >
+					<div class="pin alert alert-info">{{ pin.title }}
+						<img id="pin-image" height="100px" weight="180px" src="{{ pin.source }}" alt="Image Preview" /><br>
+						<!-- Likes counter box for logged in user -->
+						<!-- If user does not yet like pin, show red like heart  -->
+						<!-- If user already likes pin, show black dislike heart  -->
+						<div ng-show="userId" id="like-box"><a ng-show="pin.userLikes.indexOf(userId) == -1" ng-click="likePin(pin._id)"><i class="like fa fa-heart fa-2x"></i></a><a ng-show="pin.userLikes.indexOf(userId) != -1" ng-click="dislikePin(pin._id)"><i class="dislike fa fa-heart fa-2x"></i></a><span class="likes-counter">{{ pin.userLikes.length }}</span><br>By: <a ng-show="pin.userId == userId" href="/myBoard"><span id="username">you</span></a><a ng-show="pin.userId != userId" href="/users/{{pin.userId}}"><span id="username">{{ pin.userName }}</span></a></div>
+						<!-- Likes counter box for not logged in user -->
+						<div ng-show="!userId" id="like-box"><i class="like fa fa-heart fa-2x"></i><span class="likes-counter">{{ pin.userLikes.length }}</span><br>By: <a href="/users/{{pin.userId}}">{{ pin.userName }}</a></div>
 					</div>
 				</div>
 			</div>
+		</div>
 	  </div>
     </div>
   </div>
