--- a/client/app/myBoard/myBoard.html
+++ b/client/app/myBoard/myBoard.html
@@ -13,24 +13,14 @@
 		  	  		<p class="text-danger"><br>{{ pinMessage }}</p>
 		  	  	</div>
 		  	  	<!-- User pin list -->
+		  		<!-- Likes counter -->
+				<!-- If user does not yet like pin, show red like heart  -->
+				<!-- If user already likes pin, show black dislike heart  -->
 		  	  	<div ng-repeat="pin in pinList" >
 					<div class="pin alert alert-info">{{ pin.title }}
-						<img id="pin-image" height="100px" weight="180px" src="{{ pin.source }}" alt="Image Preview" />
-						<!-- Likes counter -->
-						<!-- If user does not yet like pin, show red like heart  -->
-						<!-- If user already likes pin, show black dislike heart  -->
+						<img id="pin-image" height="100px" weight="180px" src="{{ pin.source }}" alt="Image Preview" /><br>
 						<div id="like-box">
-							<span class="likes-counter">
-								<a ng-show="pin.userLikes.indexOf(userId) == -1" ng-click="likePin(pin._id)">
-									<i class="like fa fa-heart fa-2x"></i>{{ pin.userLikes.length }}
-								</a>
-								<a ng-show="pin.userLikes.indexOf(userId) != -1" ng-click="dislikePin(pin._id)">
-									<i class="dislike fa fa-heart fa-2x"></i>{{ pin.userLikes.length }}
-								</a>
-								<a ng-click="deletePin(pin._id)">
-									<i class="fa fa-trash fa-2x"></i>
-								</a>
-							</span>
+							<a ng-show="pin.userLikes.indexOf(userId) == -1" ng-click="likePin(pin._id)"><i class="like fa fa-heart fa-2x"></i><span class="likes-counter">{{ pin.userLikes.length }}</span></a><a ng-show="pin.userLikes.indexOf(userId) != -1" ng-click="dislikePin(pin._id)"><i class="dislike fa fa-heart fa-2x"></i><span class="likes-counter">{{ pin.userLikes.length }}</span></a><a ng-click="deletePin(pin._id)"><i class="fa fa-trash fa-2x"></i></a>
 						</div>
 					</div>
 				</div>
