--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -9,7 +9,8 @@
       <div ng-show="!userId"><h2>Login or sign up.</h2><br></div>
 
     <!-- Recent Pin List  -->
-      <h2>Recent pins</h2>
+      <h3 ng-show="pinList.length != 0">Recent pins</h3>
+      <h4 ng-show="pinList.length == 0">-- No pins added yet --</h4>
 	  <div class="row">
       	<div class="col-lg-12">
 	  	  	<div id="pin-list" class="js-masonry" class="pin alert alert-success">
