--- a/client/app/recentPins/recentPins.html
+++ b/client/app/recentPins/recentPins.html
@@ -13,6 +13,7 @@
 				<!-- Likes counter box for logged in user -->
 				<!-- If user does not yet like pin, show red like heart  -->
 				<!-- If user already likes pin, show black dislike heart  -->
+				<h4 ng-show="pinList.length == 0">-- No pins added yet --</h4>
 		  	  	<div ng-repeat="pin in pinList | orderBy: '-created'" >
 					<div class="pin alert alert-info">{{ pin.title }}
 						<img id="pin-image" height="100px" weight="180px" src="{{ pin.source }}" alt="Image Preview" /><br>
